# leartech-ml-learning

./: .gitignore  CLAUDE.md  MQUBE-ML-REVIEW.md  Makefile  PROGRESS.md  SETUP.md
sessions/01-tensors/: README.md  tensors.py
sessions/02-features/: README.md  features.py
sessions/03-single-neuron/: README.md  neuron.py
sessions/04-neural-network/: README.md  network.py
sessions/05-forward-pass/: README.md  forward_pass.py
sessions/06-loss-function/: CMakeLists.txt  README.md  loss.cpp  loss.py
sessions/06b-libtorch-debug/: CMakeLists.txt  Makefile  main.cpp
sessions/07-backpropagation/: README.md  backprop.py
sessions/08-training-loop/: README.md  training.py
sessions/09-overfitting/: README.md  overfitting.py
sessions/10-our-classifier/: README.md  classifier.py  code_classifier.pt
sessions/10.5-better-features/: README.md  better_features.py  code_classifier_v2.pt  feature_scaler.pkl  tfidf_vectorizer.pkl
sessions/10.6-eval-harness/: README.md  eval_harness.py
sessions/10.7-fix-distribution/: README.md  fix_distribution.py
sessions/10.8-iterate-to-green/: README.md  code_classifier_v4.pt  iterate_to_green.py  new_baseline.json  scaler_v4.pkl  tfidf_char_v4.pkl
sessions/11.5-pipeline-signals/: README.md  code_classifier_v5.pt  pipeline_signals.py  scaler_v5.pkl  tfidf_v5.pkl
sessions/11.6-deploy-v5/: README.md
sessions/12-lora-concepts/: README.md  lora_concepts.py
sessions/12-lora-concepts/lora_adapter/: adapter_config.json  adapter_model.safetensors
